@@ -82,6 +82,13 @@ void bc_init_numbers(void)
 	BCG(_two_)->n_value[0] = 2;
 }
 
+void bc_force_free_number(bc_num *num)
+{
+	pefree((*num)->n_ptr, 1);
+	pefree(*num, 1);
+	*num = NULL;
+}
+
 
 /* Make a copy of a number! Just increments the reference count! */
 bc_num bc_copy_num(bc_num num)
